[gd_scene load_steps=8 format=2]

[ext_resource path="res://blackhole/Blackhole.gd" type="Script" id=1]
[ext_resource path="res://blackhole/Nova.png" type="Texture" id=2]
[ext_resource path="res://blackhole/Blackhole.png" type="Texture" id=3]
[ext_resource path="res://blackhole/Arms.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 22.2543

[node name="Blackhole" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="PullArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PullArea"]
shape = SubResource( 1 )

[node name="StageCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="NovaSprite" type="Sprite" parent="."]
position = Vector2( -0.75, -0.25 )
texture = ExtResource( 2 )

[node name="ArmsSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( -7, 12 )

[node name="BlackHoleSprite" type="Sprite" parent="."]
position = Vector2( -136.307, -115.594 )
texture = ExtResource( 3 )
centered = false

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 3 )
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
